# StereoCalibrationWizard

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.xml  main.py
data/: calib_data.xml
matlab/: costFunction.m  main.m
matlab/AutoCorr/: extACMat.m  singleACMat.m
matlab/Jacobian/: JMat.m  JMatNext.m  JMatNextStereo.m  JMatStereo.m  buildMatrix.m  buildSigma.m  traceCount.m
matlab/Points/: buildPoints.m  nextPoints.m  projectPoints.m  writePoints.m
matlab/import/: importCameraData.m  importConfig.m  importData.m
matlab/tools/: dcm2angle.m  distCount.m  plotNext.m  plotUMap.m  plotUncertaintyMap.m
python/: gui.py  impl.py  log.py  plot.py  storage.py
src/: basic.hpp  main.cpp
src/function/: calibration.cpp  function.hpp  measurement.cpp  tools.cpp
src/logging/: logging.cpp  logging.hpp
src/module/Calibrate/: calibrate.hpp  calibrate_data.cpp  camera_calibrate.cpp  stereo_calibrate.cpp
src/module/Capture/: camera.cpp  capture.cpp  capture.hpp
src/module/Config/: config.cpp  config.hpp
src/module/Measure/: disparity.cpp  measure.cpp  measure.hpp
src/module/Measure/ADcensus/: adcensus_type.hpp
src/module/Measure/elas/: elas_type.hpp
src/module/Measure/elas/source_code/: descriptor.h  elas.h  filter.cpp  filter.h  matrix.h
src/module/Measure/sgbm/: sgbm_type.hpp  sgbm_util.hpp
src/util/: argparse.hpp  logging.hpp  timer.hpp
